@@ -1,0 +1,178 @@
+#!/bin/bash
+
+## HiC-Pro           
+## Copyleft 2017 Institut Curie
+## Author(s): Nicolas Servant
+## Contact: nicolas.servant@curie.fr
+## This software is distributed without any guarantee under the terms of the BSD licence
+
+##
+## First version of converter between HiCPro and higlass.
+## The cooler python package should be properly installed, as well as the higlass software
+##
+
+function usage {
+    echo -e "usage : hicpro2higlass -i INPUT -r RESOLUTION -c CHROMSIZE [-n] [-h]" ## [-b BINS]
+    echo -e "Use option -h|--help for more information"
+}
+
+function help {
+    usage;
+    echo 
+    echo "Generate Higlass input file from HiC-Pro results"
+    echo "See https://github.com/hms-dbmi/higlass-website for details about Higlass"
+    echo "---------------"
+    echo "OPTIONS"
+    echo
+    echo "   -i|--input INPUT : allValidPairs or matrix file generated by HiC-Pro"
+#    echo "   -b|--bed BINS : bed file generated by HiC-Pro with intervals coordinates (require if input is a .matrix file)"
+    echo "   -r|--res RESOLUTION : .matrix file resolution or maximum resolution to reach from the .allValidPairs input file"
+    echo "   -c|--chrom CHROMSIZE : chromosome size file"
+    echo "   [-n|--norm] : run cooler matrix balancing algorithm"
+    echo "   [-h|--help]: help"
+    exit;
+}
+
+
+if [ $# -lt 1 ]
+then
+    usage
+    exit
+fi
+
+# Transform long options to short ones
+for arg in "$@"; do
+  shift
+  case "$arg" in
+      "--input") set -- "$@" "-i" ;;
+      "--bed")   set -- "$@" "-b" ;;
+      "--res")   set -- "$@" "-r" ;;
+      "--chrom") set -- "$@" "-c" ;;
+      "--norm")   set -- "$@" "-n" ;;
+      "--help")   set -- "$@" "-h" ;;
+       *)        set -- "$@" "$arg"
+  esac
+done
+
+INPUT_HICPRO=""
+INPUT_BED=""
+NORMALIZE=0
+CHROMSIZES_FILE=""
+RES=10000
+
+while getopts ":i:b:c:r:nh" OPT
+do
+    case $OPT in
+	i) INPUT_HICPRO=$OPTARG;;
+	b) INPUT_BED=$OPTARG;;
+	n) NORMALIZE=1;;
+	c) CHROMSIZES_FILE=$OPTARG;;
+	r) RES=$OPTARG;;
+	h) help ;;
+	\?)
+	    echo "Invalid option: -$OPTARG" >&2
+	    usage
+	    exit 1
+	    ;;
+	:)
+	    echo "Option -$OPTARG requires an argument." >&2
+	    usage
+	    exit 1
+	    ;;
+    esac
+done
+
+if [[ -z $INPUT_HICPRO ]];
+then
+    usage
+    exit
+fi
+
+## Detect input data type
+DATATYPE=""
+if [[ $INPUT_HICPRO == *.matrix ]]; then
+    DATATYPE="MATRIX"
+    if [[ -z $INPUT_BED ]]; then
+	echo -e "Exit. BED file is required with .matrix file."
+	usage
+	exit 1
+    fi
+elif [[ $INPUT_HICPRO == *allValidPairs ]]; then
+    DATATYPE="VALID"
+else
+    echo -e "Unknown input data type. Expect .matrix or _allValidPairs input files."
+    exit 1
+fi
+echo -e "$DATATYPE input file detected ..."
+
+## Check cooler version
+which cooler > /dev/null;
+if [ $? != "0" ]; then
+    echo -e "Cooler is not installed or is not in your $PATH. See https://github.com/mirnylab/cooler for details."
+    exit 1;
+fi
+
+COOLER_VERSION=$(cooler --version 2>&1 | awk '{print $NF}')
+echo "Cooler version $COOLER_VERSION detected ..."
+if [[ "$COOLER_VERSION" < "0.7.6" ]]; then
+    echo "Cooler version must be >= 0.7.6 ! Stop."
+fi
+
+if [[ $DATATYPE == "VALID" ]]; then
+    which pairix > /dev/null;
+    if [ $? != "0" ]; then
+	echo -e "Pairix is not installed or is not in your $PATH. See https://github.com/4dn-dcic/pairix."
+	exit 1;
+    fi
+fi
+
+echo -e "\nGenerating .cool files ..."
+tmp_dir=./_tmp$$
+mkdir -p $tmp_dir
+
+if [[ $DATATYPE == "MATRIX" ]]; then
+    out=$(basename $INPUT_HICPRO | sed -e 's/.matrix/.cool/')
+    
+    cooler makebins $CHROMSIZES_FILE $RES > $tmp_dir/bins.bed
+    cooler load -f coo --one-based $tmp_dir/bins.bed $INPUT_HICPRO $out
+
+    echo -e "\nZoomify .cool file ..."
+    if [[ $NORMALIZE == 1 ]]; then
+	cooler zoomify $out
+    else
+	cooler zoomify --no-balance $out
+    fi
+    out=$(basename $INPUT_HICPRO | sed -e 's/.matrix/.mcool/')
+    
+elif [[ $DATATYPE == "VALID" ]]; then
+    out=$(basename $INPUT_HICPRO | sed -e 's/_allValidPairs/.cool/')
+
+    awk '{OFS="\t";print $2,$3,$4,$5,$6,$7,1}' $INPUT_HICPRO | sed -e 's/+/1/g' -e 's/-/16/g' > $tmp_dir/contacts.txt
+    #awk '{print $1,$4,$2,$3,$9,$7,$5,$6,$10,$11,$12}' SRR3179588_WT_sample_allValidPairs | sed -e 's/+/1/g' -e 's/-/16/g' > contacts.txt
+    cooler csort --nproc 2 -c1 1 -p1 2 -s1 3 -c2 4 -p2 5 -s2 6 \
+	   -o $tmp_idr/contacts.sorted.txt.gz  \
+	   $tmp_dir/contacts.txt \
+	   $CHROMSIZES_FILE
+    
+    #cooler csort -c1 2 -p1 3 -c2 5 -p2 6 --sep '\t' --out contacts.sorted.txt.gz $INPUT_HICPRO $CHROMSIZES_FILE
+    cooler makebins $CHROMSIZES_FILE $RES > $tmp_dir/bins.bed
+    cooler cload pairix $tmp_dir/bins.bed $tmp_dir/contacts.sorted.txt.gz $out
+
+    echo -e "\nZoomify .cool file ..."
+    if [[ $NORMALIZE == 1 ]]; then
+	cooler zoomify $out
+    else
+	cooler zoomify --no-balance $out
+    fi
+    out=$(basename $INPUT_HICPRO | sed -e 's/_allValidPairs/.mcool/')
+fi
+
+## clean
+#/bin/rm -f $tmp_dir
+
+echo -e "\nCooler file generated with success ..."
+echo "Please copy the file $out in your Higlass input directory and run :"
+echo "docker exec higlass-container python higlass-server/manage.py  ingest_tileset --filename /tmp/$out --datatype matrix --filetype cooler" 
+
+
+
